# console_ai_chat

./: .gitignore  Cargo.toml  readme.md
src/: conversation.rs  main.rs  syntax_highlighter.rs  text_formatter.rs
src/models/: claude.rs  gpt.rs  mod.rs
src/response_types/: command.rs  mod.rs  short.rs
src/syntax_highlighter/: code_block_highlighter.rs  language_factory.rs  mod.rs  token_highlighter.rs
src/syntax_highlighter/language_factory/: language_def.rs  language_factory.rs  mod.rs
src/syntax_highlighter/language_factory/languages/: bash.rs  csharp.rs  css.rs  html.rs  javascript.rs  python.rs  rust.rs  sql.rs  swift.rs  typescript.rs
src/syntax_highlighter/languages/: bash.rs  csharp.rs  css.rs  html.rs  javascript.rs  mod.rs  python.rs  rust.rs  sql.rs  swift.rs  typescript.rs
