[package]
name = "console_ai_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12"
async-trait = "0.1"
dotenv = "0.15"
lazy_static = "1.4.0"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.0"
tokio = { version = "1", features = ["full"] }